--- a/Biblio_Loop.bib
+++ b/Biblio_Loop.bib
@@ -680,7 +680,11 @@
   pages     = {454--458},
   publisher = {IEEE},
 }
-
+@article{zhang2021resource,
+	title={Resource allocation problems in manufacturing systems using white-box-simulation-based cut generation approach},
+	author={Zhang, Mengyi},
+	year={2021}
+}
 
 @article{basile2012k,
 	title={On K-diagnosability of Petri nets via integer linear programming},
